fix hover and spacing for champion list

--- a/ui/app/fortifica.scss
+++ b/ui/app/fortifica.scss
@@ -57,12 +57,32 @@ body {
 
 .champion-list {
   list-style: none;
+  padding: 0 40px 0 40px;
+
+  a {
+    color: white;
+  }
 
   .champion-listitem {
-    width: 90px;
+    background-color: black;
+    border: 1px solid black;
+    width: 92px;
     float: left;
-    margin: 8px 0 8px 8px;
+    margin: 0px 8px 8px 0px;
+
+    &:hover {
+      border: 1px solid #aaa;
+
+      .champion-listitem__image_background {
+        background-color: white;
+      }
+
+      .champion-listitem__image {
+        opacity: 0.9;
+      }
+    }
   }
+
 
   .champion-listitem__image {
     width: 90px;
@@ -70,7 +90,6 @@ body {
   }
 
   .champion-listitem__text {
-    background-color: black;
     padding: 2px;
     width: 90px;
     text-align: center;
